welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int = 0
while(!estSurBiscuit){
	avance()
	nbPas=nbPas + 1
}
prendBiscuit()
portzeBiscuit()
var dejafait:Int = 0
while (dejafait!=nbPas){
	recule()
	dejafait = dejafait + 1

}
